# GKL

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  SECURITY.md  build.gradle  build.sh  profile.csv
gradle/wrapper/: gradle-wrapper.properties
scripts/: buildMac.sh  buildOnMac.sh  gatk-printreads-test.py  gatkIntegration.sh
src/examples/PairHMM/: Makefile  PairHMMUnitTest.cpp  PairHMMUnitTest.h  README  (+1 more)
src/main/native/compression/: CMakeLists.txt  IntelDeflater.cc  IntelDeflater.h  IntelInflater.cc  IntelInflater.h  Makefile  build  clean  isa-l.patch  otc_zlib.patch
src/main/native/compression/igzip_042/: ReleaseNotes.txt
src/main/native/compression/igzip_042/igzip/: Makefile  data_struct2.asm  huffman.asm  hufftables_bam.asm  hufftables_sam.asm  igzip0c_finish.asm  igzip1c_finish.asm  init_stream.asm  options.h  options.inc
src/main/native/compression/igzip_042/igzip/c_code/: bitbuf2.h  common.cpp  crc.cpp  fast_lz77.h  fast_lz77_2.h  hufftables_c.cpp  hufftables_c_bam.c  hufftables_c_sam.c  igzip_lib.h
src/main/native/compression/igzip_042/include/: os.h
src/main/native/compression/isa-l-master/: .gitignore  Makefile  Makefile.in  Makefile.unx  aclocal.m4  config.status  configure  configure.ac  isa-l.h  libisal.la  libisal.pc  libtool
src/main/native/compression/isa-l-master/.libs/: libisal.la  libisal.lai
src/main/native/compression/isa-l-master/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/main/native/compression/isa-l-master/crc/: crc16_t10dif_01.lo  crc16_t10dif_by4.lo  crc16_t10dif_perf.c  crc32_ieee_01.lo  crc32_ieee_by4.lo  crc32_iscsi_00.lo  crc32_iscsi_01.lo  crc_base.lo  crc_multibinary.lo
src/main/native/compression/isa-l-master/crc/.deps/: crc_base.Plo
src/main/native/compression/isa-l-master/erasure_code/: ec_base.lo  ec_highlevel_func.lo  ec_multibinary.lo  gf_2vect_dot_prod_avx.lo  gf_2vect_dot_prod_avx2.lo  gf_2vect_dot_prod_avx512.lo  gf_2vect_dot_prod_sse.lo  gf_2vect_mad_avx.lo  gf_2vect_mad_avx2.lo  gf_2vect_mad_avx512.lo  gf_2vect_mad_sse.lo  gf_3vect_dot_prod_avx.lo  gf_3vect_dot_prod_avx2.lo  gf_3vect_dot_prod_avx512.lo  gf_3vect_dot_prod_sse.lo  gf_3vect_mad_avx.lo  gf_3vect_mad_avx2.lo  gf_3vect_mad_avx512.lo  gf_3vect_mad_sse.lo  gf_4vect_dot_prod_avx.lo  gf_4vect_dot_prod_avx2.lo  gf_4vect_dot_prod_avx512.lo  gf_4vect_dot_prod_sse.lo  gf_4vect_mad_avx.lo  gf_4vect_mad_avx2.lo  gf_4vect_mad_avx512.lo  gf_4vect_mad_sse.lo  gf_5vect_dot_prod_avx.lo  gf_5vect_dot_prod_avx2.lo  gf_5vect_dot_prod_sse.lo  gf_5vect_mad_avx.lo  gf_5vect_mad_avx2.lo  gf_5vect_mad_sse.lo  gf_6vect_dot_prod_avx.lo  gf_6vect_dot_prod_avx2.lo  gf_6vect_dot_prod_sse.lo  gf_6vect_mad_avx.lo  gf_6vect_mad_avx2.lo  gf_6vect_mad_sse.lo  gf_vect_dot_prod_avx.lo  (+9 more)
src/main/native/compression/isa-l-master/erasure_code/.deps/: ec_base.Plo  ec_highlevel_func.Plo
src/main/native/compression/isa-l-master/igzip/: crc32_gzip.lo  crc_data.lo  crc_utils_01.lo  crc_utils_04.lo  detect_repeated_char.lo  huff_codes.lo  hufftables_c.lo  igzip.lo  igzip_base.lo  igzip_body_01.lo  igzip_body_04.lo  igzip_finish.lo  igzip_multibinary.lo  igzip_stateless_01.lo  igzip_stateless_04.lo  igzip_stateless_base.lo
src/main/native/compression/isa-l-master/igzip/.deps/: huff_codes.Plo  hufftables_c.Plo  igzip.Plo  igzip_base.Plo  igzip_stateless_base.Plo
src/main/native/compression/isa-l-master/igzip/aarch64/: igzip_multibinary_arm64.S
src/main/native/compression/isa-l-master/lib/: libisal.la  libisal.so.2  libisal.so.2.0.16
src/main/native/compression/isa-l-master/mem/: Makefile.am
src/main/native/compression/isa-l-master/raid/: pq_check_sse.lo  pq_gen_avx.lo  pq_gen_avx2.lo  pq_gen_sse.lo  raid_base.lo  raid_multibinary.lo  xor_check_sse.lo  xor_gen_avx.lo  xor_gen_sse.lo
src/main/native/compression/isa-l-master/raid/.deps/: raid_base.Plo
src/main/native/compression/libz/: CMakeLists.txt  README  zlib.patch  zlib_deflate.patch
src/main/native/compression/otc_zlib/: .gitignore  Makefile  Makefile.in  README-GKL  a.out  adler32.c  adler32.lo  compress.lo  configure  crc32.c  crc32.lo  crc_folding.c  crc_folding.h  crc_folding.lo  deflate.c  deflate.h  deflate.lo  deflate_medium.c  deflate_medium.lo  deflate_quick.lo  example  example64  examplesh  gzclose.lo  gzlib.lo  gzread.lo  gzwrite.c  gzwrite.lo  infback.c  infback.lo  inffast.c  inffast.lo  inflate.c  inflate.h  inflate.lo  inftrees.lo  libz.so.1  libz.so.1.2.11  libz.so.1.2.12.1-motley  libz.so.1.2.13  (+14 more)
src/main/native/compression/otc_zlib/test/: infcover.c
src/main/native/compression/zlib-1.2.8/: .gitignore
src/main/native/pairhmm/: CMakeLists.txt  Context.h  IntelPairHmm.cc  IntelPairHmm.h  IntelPairHmmCSource.cpp  JavaData.h  Makefile  README.md  avx-functions-double.h  avx-functions-float.h  avx-pairhmm-template.h  avx-pairhmm.h  avx-types.h  avx-vector-shift.h  avx512-functions-double.h  avx512-functions-float.h  avx512-pairhmm.h  avx512-vector-shift.h  avx512_impl.cc  avx512_impl.h  avx_impl.cc  avx_impl.h  neon-functions-double.h  neon-functions-float.h  neon-pairhmm-template.h  neon-pairhmm.h  neon-types.h  neon-vector-shift.h  neon_impl.cc  neon_impl.h  pairhmm_common.cc  pairhmm_common.h  shacc_pairhmm.h  shacc_pairhmm_stub.cc
src/main/native/pdhmm/: CMakeLists.txt  IntelPDHMM.cc  IntelPDHMM.h  MathUtils-avx.h  MathUtils.cc  MathUtils.h  avx2-functions.h  avx2-pdhmm.h  avx2_impl.cc  avx2_impl.h  avx512-functions.h  avx512-pdhmm.h  avx512_impl.cc  avx512_impl.h  pdhmm-common.h  pdhmm-serial.cc  pdhmm-serial.h  pdhmm.h
src/main/native/smithwaterman/: CMakeLists.txt  IntelSmithWaterman.cc  IntelSmithWaterman.h  IntelSmithWatermanCSource.cpp  IntelSmithWatermanCSource.h  PairWiseSW.cpp  PairWiseSW.h  avx2-functions.h  avx2-smithwaterman.h  avx2_impl.cc  avx2_impl.h  avx512-functions.h  avx512-smithwaterman.h  avx512_impl.cc  avx512_impl.h  avx_impl.cc  avx_impl.h  neon-functions.h  neon-smithwaterman.h  neon_impl.cc  neon_impl.h  smithwaterman_common.cc  smithwaterman_common.h
src/main/native/utils/: CMakeLists.txt  utils.cc  utils.h
(+74 files in other folders)
